.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Facility_Mapping__c/VMS_Facility_Mapping__c.object-meta.xml
<CustomObject>
    <description>Map Facility from VMS Emails to BH Facility/Site</description>
    <label>VMS Facility Mapping</label>
    <nameField>
        <displayFormat>VFM-{0000000}</displayFormat>
        <label>VMS Facility Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VMS Facility Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>