.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Facility_Mapping__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VMS Facility Mappings</relationshipLabel>
    <relationshipName>VMS_Facility_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>