.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Facility_Mapping__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>sirenum__Site__c</referenceTo>
    <relationshipLabel>VMS Facility Mappings</relationshipLabel>
    <relationshipName>VMS_Facility_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>