.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Facility_Mapping__c/fields/VMS_Facility__c.field-meta.xml
<CustomField>
    <fullName>VMS_Facility__c</fullName>
    <label>VMS Facility</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>