.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Facility_Mapping__c/fields/VMS_Name__c.field-meta.xml
<CustomField>
    <fullName>VMS_Name__c</fullName>
    <label>VMS Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VMS_Source</valueSetName>
    </valueSet>
</CustomField>