.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Facility_Mapping__c/fields/WFM_Contract__c.field-meta.xml
<CustomField>
    <fullName>WFM_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WFM Contract</label>
    <referenceTo>sirenum__ProActiveContract__c</referenceTo>
    <relationshipLabel>VMS Facility Mappings</relationshipLabel>
    <relationshipName>VMS_Facility_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>