.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Facility_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VMS_Name__c</columns>
    <columns>VMS_Facility__c</columns>
    <columns>Facility__c</columns>
    <columns>WFM_Contract__c</columns>
    <columns>Site__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>